--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,13 @@ configurations {
 }
 
 repositories {
+    maven {
+        url 'http://maven.aliyun.com/nexus/content/groups/public'
+    }
     mavenCentral()
+}
+tasks.withType(JavaCompile) {
+    options.encoding = 'utf-8'
 }
 
 dependencies {
@@ -29,6 +35,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+//    implementation 'org.apache.shiro:shiro-core:1.5.3'
+
 }
 
 test {
