--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
     implementation 'org.webjars:bootstrap'
 //    implementation 'org.apache.shiro:shiro-core:1.5.3'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'com.auth0:java-jwt:3.10.3'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
+
 
 }
 
