--- a/src/main/resources/config/abdp.properties
+++ b/src/main/resources/config/abdp.properties
@@ -1,2 +1,7 @@
 abdp.tmp.file.path=C:/Users/duwenlei/.abdp
 abdp.jks.file.name=abdp.jks
+
+# TOKEN 请求前缀
+abdp.jwt.token.prefix=abdp-
+abdp.jwt.token.header=Authorization
+abdp.jwt.token.expire=864000s
