--- a/build.gradle
+++ b/build.gradle
@@ -25,19 +25,14 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
+//    runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-    implementation 'org.webjars:bootstrap'
-//    implementation 'org.apache.shiro:shiro-core:1.5.3'
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
@@ -46,6 +41,13 @@ dependencies {
     implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'com.baomidou:mybatis-plus-boot-starter:3.3.2'
+//    implementation 'org.springframework.boot:mybatis-spring-boot-starter'
+    implementation 'com.baomidou:mybatis-plus:3.3.2'
+    implementation 'com.baomidou:mybatis-plus-generator:3.3.2'
+    implementation 'org.apache.velocity:velocity-engine-core:2.2'
+    implementation 'com.zaxxer:HikariCP:3.4.5'
 
 
 }
